--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,28 +54,15 @@
 	
 </head>
 <body>
-	<button class="btn btn btn-outline-info btn-covid-info" type="button" data-toggle="collapse" data-target="#infoCard" aria-expanded="false" aria-controls="infoCard">
-		Info
-	</button>
+	<nav class="navbar sticky-top navbar-dark bg-dark">
+		<span class="navbar-brand mb-0 h1">Italian Covid Status</span>
+		<button class="btn btn btn-outline-light" type="button" data-toggle="modal" data-target="#infoModal">
+			Info
+		</button>
+	</nav>
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">&nbsp;</div>
-		</div>
-		<div class="row">
-			<div class="col-12">
-				<div class="card card-body collapse" id="infoCard">
-					<p>Ho creato questa pagina web per poter visualizzare la sistuazione del COVID-19 in Italia.
-					I numeri che vengono comunicati dai notiziari non mi permetto di visualizzare la situazione,
-					 e cos&igrave; ho deciso di creare dei grafici. I dati li recupero dal sito del ministero della 
-					 salute, quindi sono gli stessi che i notiziari ci comunicano ogni giorno. Questo sito aggiorna 
-					 i dati ogni ora, il codice sorgente &egrave; disponibile su 
-					 <a href="https://github.com/marcosolina/covidstatus" style="" target="_blank">questo</a> 
-					 repository, mentre i dati del Ministero della Salute sono disponibile nel 
-					 <a href="https://github.com/pcm-dpc/COVID-19" target="_blank">repository ufficiale</a> 
-					 del ministero.
-					 </p> 
-				</div>
-			</div>
 		</div>
 		<div class="row">
 			<div class="col-8 col-sm-4 col-md-3 col-lg-3 col-xl-2">
@@ -213,6 +200,30 @@
 					<div class="col-lg-12 col-xl-8">
 						<canvas id="chartProvince"></canvas>
 					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal" tabindex="-1" id="infoModal">
+		<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title">Covid Status</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<p>Ho creato questa pagina web per poter visualizzare la sistuazione del COVID-19 in Italia.
+					I numeri che vengono comunicati dai notiziari non mi permetto di visualizzare la situazione,
+					 e cos&igrave; ho deciso di creare dei grafici. I dati li recupero dal sito del ministero della 
+					 salute, quindi sono gli stessi che i notiziari ci comunicano ogni giorno. Questo sito aggiorna 
+					 i dati ogni ora, il codice sorgente &egrave; disponibile su 
+					 <a href="https://github.com/marcosolina/covidstatus" style="" target="_blank">questo</a> 
+					 repository, mentre i dati del Ministero della Salute sono disponibile nel 
+					 <a href="https://github.com/pcm-dpc/COVID-19" target="_blank">repository ufficiale</a> 
+					 del ministero.
+					 </p>
 				</div>
 			</div>
 		</div>
