--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,11 +47,11 @@
 		
 		window.onload = function(){
 			CovidCommon.init(); // Initialise the app
-			$("#btnTheme").click();
+			//$("#btnTheme").click();
 			$("#dateFrom").change(); // Load the first set of data
 			//$("#infoModal").modal("show"); // Show the info modal
-			setTimeout(function(){$(".button-notification").fadeIn();}, 1000);
-			setTimeout(function(){$(".button-notification").fadeOut();}, 10000);
+			setTimeout(function(){$(".button-notification").fadeIn();}, 2000);
+			setTimeout(function(){$(".button-notification").fadeOut();}, 11000);
 		}
 		
 	/*]]>*/
