--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,7 +44,8 @@
 	/*<![CDATA[*/
 		
 	    var __URLS = /*[[${urls}]]*/ {};
-	    var __REGIONS = /*[[${regions}]]*/ {};
+	    var __REGIONS_LIST = /*[[${regions}]]*/ {};
+	    var __REGIONS_MAP = {};
 		
 		window.onload = function(){
 			CovidCommon.init(); // Initialise the app
@@ -263,6 +264,12 @@
 						&nbsp;
 					</div>
 				</div>
+				<div class="row" id="rowRegionVaccines"></div>
+				<div class="row">
+					<div class="col-12">
+						&nbsp;
+					</div>
+				</div>
 				<div class="row">
 					<div class="col-12">
 						<div class="d-flex justify-content-center">
@@ -275,7 +282,6 @@
 						&nbsp;
 					</div>
 				</div>
-				<div class="row" id="rowRegionVaccines"></div>
 				<div class="row">
 					<div class="col-lg-12 col-xl-8">
 						<canvas id="chartVaccinesDelivered"></canvas>
