--- a/src/main/resources/templates/fragments/tabVaccines.html
+++ b/src/main/resources/templates/fragments/tabVaccines.html
@@ -18,27 +18,18 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-12">
-				<div class="d-flex justify-content-center">
-					<h5>Vaccini Consegnati</h5>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-12">
-				&nbsp;
-			</div>
-		</div>
-		<div class="row">
 			<div class="col-lg-12 col-xl-8">
 				<canvas id="chartVaccinesDelivered"></canvas>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-12">
-				<div class="d-flex justify-content-center">
-					<h5>Fornitori Vaccini</h5>
-				</div>
+				&nbsp;
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12 col-xl-8">
+				<canvas id="chartVaccinesGiven"></canvas>
 			</div>
 		</div>
 		<div class="row">
@@ -47,8 +38,14 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-12 col-xl-8">
+			<div class="col-md-12 col-lg-6 col-xl-4">
 				<canvas id="chartVaccinesSuppliers"></canvas>
+			</div>
+			<div class="col-md-12 col-lg-6 col-xl-4">
+				<canvas id="chartVaccinesDoses"></canvas>
+			</div>
+			<div class="col-md-12 col-lg-6 col-xl-4">
+				<canvas id="chartVaccinesPerAge"></canvas>
 			</div>
 		</div>
 	</div>
