--- a/src/main/resources/templates/fragments/tabRegionData.html
+++ b/src/main/resources/templates/fragments/tabRegionData.html
@@ -12,7 +12,7 @@
 				&nbsp;
 			</div>
 		</div>
-		<div class="row">
+		<div class="row" id="regionInfoType">
 			<div class="col-lg-12 col-xl-8">
 				<div class="input-group input-group-sm">
 					<div class="input-group-prepend">
@@ -29,7 +29,7 @@
 				&nbsp;
 			</div>
 		</div>
-		<div class="row" id="rowRegion"></div>
+		<div class="row" id="rowRegionsCheckboxes"></div>
 		<div class="row">
 			<div class="col-lg-12 col-xl-8">
 				<canvas id="chartRegions"></canvas>
