--- a/src/main/resources/templates/fragments/tabVaccines.html
+++ b/src/main/resources/templates/fragments/tabVaccines.html
@@ -27,6 +27,12 @@
 				&nbsp;
 			</div>
 		</div>
+		<div class="row" id="vaccinesGivenCheckboxes"></div>
+		<div class="row">
+			<div class="col-12">
+				&nbsp;
+			</div>
+		</div>
 		<div class="row">
 			<div class="col-lg-12 col-xl-8">
 				<canvas id="chartVaccinesGiven"></canvas>
