--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,6 +31,10 @@
 	<script th:src="@{/js/DoughnutChart.js?v=} + ${appVersion}"></script>
 	<script th:src="@{/js/CovidChartDataset.js?v=} + ${appVersion}"></script>
 	<script th:src="@{/js/CovidCommon.js?v=} + ${appVersion}"></script>
+	<script th:src="@{/js/NationalChart.js?v=} + ${appVersion}"></script>
+	<script th:src="@{/js/RegionsChart.js?v=} + ${appVersion}"></script>
+	<script th:src="@{/js/ProvinceChart.js?v=} + ${appVersion}"></script>
+	<script th:src="@{/js/VaccinesChart.js?v=} + ${appVersion}"></script>
 	
 	<link rel="stylesheet" th:href="@{/webjars/css/jquery-ui.css}">
 	<link rel="stylesheet" th:href="@{/webjars/css/bootstrap.min.css}">
@@ -51,7 +55,7 @@
 		window.onload = function(){
 			CovidCommon.init(); // Initialise the app
 			//$("#btnTheme").click();
-			$("#dateFrom").change(); // Load the first set of data
+			//$("#dateFrom").change(); // Load the first set of data
 			//$("#infoModal").modal("show"); // Show the info modal
 			setTimeout(function(){$(".button-notification").fadeIn();}, 2000);
 			setTimeout(function(){$(".button-notification").fadeOut();}, 11000);
